# pact-python

./: .cirrus.yml  .editorconfig  .envrc  .flake8  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .markdownlint.yml  .pre-commit-config.yaml  .taplo.toml  .tombi.toml  .travis.yml  .yamlfmt.yml  AGENTS.md  CHANGELOG.md  CHANGES.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.ubuntu  LICENSE  MANIFEST  MANIFEST.in  MIGRATION.md  Makefile  README.md  RELEASING.md  UPGRADE_FFI.md  biome.json  cliff.toml  committed.toml  conftest.py  hatch_build.py  mkdocs.yml  prek.toml  pyproject.toml  release_prep.sh  requirements.txt  requirements_dev.txt  run-docker.sh  setup.cfg  (+2 more)
.devcontainer/: .containerignore  Containerfile  devcontainer.json
.github/: CHANGELOG.md.j2  PULL_REQUEST_TEMPLATE.md  codecov.yml  labels.yml  renovate.json  semantic.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/instructions/: pact-cli.instructions.md  pact-ffi.instructions.md  pact-v2.instructions.md  pact.instructions.md  python-tests.instructions.md  python.instructions.md
.github/workflows/: build-cli.yml  build-ffi.yml  build.yml  build_and_test.yml  docs.yml  generate-dsl-doc.yml  labels.yml  package_and_push_to_pypi.yml  release-cli.yml  release-core.yml  release-ffi.yml  smartbear-issue-label-added.yml  test.yml  triage.yml  trigger_pact_docs_update.yml
docker/: Dockerfile  README.md  build.sh  py27.Dockerfile  py310.Dockerfile  py311.Dockerfile  py36.Dockerfile  py37.Dockerfile  py38.Dockerfile  py39.Dockerfile
docs/: SUMMARY.md  consumer.md  logging.md  provider.md  releases.md
docs/blog/: .authors.yml
docs/scripts/: .ruff.toml  markdown.py  other.py  python.py  rewrite-docs-links.py  ruff.toml
e2e/: app.py  docker-compose.yml
e2e/contracts/: test_e2e.py  test_e2e_failing_verification.py
examples/: .gitignore  .ruff.toml  README.md  conftest.py  container-compose.yml  docker-compose.yml
examples/area_calculator/: area_calculator_client.py  area_calculator_pb2.py  area_calculator_pb2.pyi  area_calculator_pb2_grpc.py  area_calculator_server.py  requirements.txt
examples/broker/: docker-compose.yml
examples/catalog/: README.md  pyproject.toml
examples/catalog/multipart_matching_rules/: README.md  test_consumer.py  test_provider.py
examples/common/: sharedfixtures.py
examples/consumer/: conftest.py  requirements.txt  run_pytest.sh
examples/e2e/: README.md  conftest.py  pact_provider.py  requirements.txt  run_pytest.sh  verify_pact.sh
examples/fastapi_e2e/: Pipfile  README.md  __init__.py  pythonclient-pythonservice.json  requirements.txt  run_pytest.sh
examples/fastapi_provider/: requirements.txt  run_pytest.sh  verify_pact.sh
examples/ffi/: README.md  pact_ffi_help.txt  pact_ffi_verifier_args.json  pact_ffi_verifier_help.txt
examples/flask_provider/: .flake8  README.md  pact_provider.py  requirements.txt  run_pytest.sh  verify_pact.sh
examples/grpc/: area_calculator_client.py  area_calculator_pb2_grpc.py  area_calculator_server.py  requirements.txt  run_pytest.sh  test_grpc_consumer.py  test_grpc_provider.py
examples/http/: README.md  __init__.py
examples/http/aiohttp_and_flask/: README.md  conftest.py  consumer.py  provider.py  pyproject.toml  test_consumer.py  test_provider.py
examples/http/requests_and_fastapi/: README.md  consumer.py  provider.py  pyproject.toml  test_consumer.py  test_provider.py
examples/http/service_consumer_provider/: README.md  auth_client.py  conftest.py  frontend_client.py  pyproject.toml  test_consumer_auth.py  test_consumer_frontend.py  test_provider.py  user_service.py
examples/message/: README.md  conftest.py  requirements.txt  run_pytest.sh  test_provider.py
examples/pacts/: grpc-consumer-python-area-calculator-provider.json  http-consumer-1-http-provider.json  http-consumer-2-http-provider.json  message-consumer-2-message-provider.json  pact-consumer-one-pact-provider-one.json  userserviceclient-userservice.json  v2-http.json  v3-http.json  v3-message.json  v4-grpc.json
examples/plugins/grpc/: README.md  __init__.py  conftest.py  pyproject.toml  test_consumer.py  test_provider.py
examples/proto/: area_calculator.proto
examples/src/: __init__.py  consumer.py  fastapi.py  flask.py  message.py  message_producer.py
examples/tests/: provider_server.py  (+7 more)
pact/: __init__.py  __version__.py  broker.py  constants.py  consumer.py  decimal_encoder.py  http_proxy.py  matchers.py  matchers_v3.py  message.py  message_consumer.py  message_pact.py  message_provider.py  pact.py  pact_exception.py  pact_v3.py  provider.py  verifier.py  verifier_v3.py  verify.py  verify_wrapper.py
pact-python-cli/: .gitignore  CHANGELOG.md  README.md  cliff.toml  hatch_build.py  pyproject.toml
pact-python-cli/docs/: SUMMARY.md
pact-python-cli/src/pact_cli/: __init__.py  __version__.py
pact-python-cli/tests/: test_init.py  test_telemetry.py
pact-python-ffi/: .gitignore  CHANGELOG.md  LICENSE  README.md  cliff.toml  hatch_build.py  pyproject.toml
pact-python-ffi/docs/: SUMMARY.md
pact-python-ffi/src/pact_ffi/: __init__.py  __version__.py
pact-python-ffi/tests/: .ruff.toml  test_init.py
pact-python-v3/: Cargo.toml  README.md
pact-python-v3/src/: lib.rs  verifier.rs
pact/v3/: ffi.py  (+3 more)
pacts/: TodoApp-TodoServiceV3.json  http-consumer-1-http-provider.json  pact-consumer-two-pact-provider-chalice.json  pact-consumer-two-pact-provider-one.json
script/: commit_message.py  create-pr-to-update-pact-ruby-standalone.sh  generate_verifier.py  generate_verifier_args.py  install_plugins.sh  release_prep.sh  verifier_args.py
scripts/: build.sh  generate_dsl_doc.py  release.py
tests/: .ruff.toml  __init__.py  conftest.py  ruff.toml  test_broker.py  test_constants.py  test_consumer.py  test_error.py  test_http_interaction.py  test_http_proxy.py  test_issue.py  test_match.py  test_matchers.py  test_message_consumer.py  test_message_pact.py  test_message_provider.py  test_pact.py  test_provider.py  test_server.py  test_sync_interaction.py  test_util.py  test_verifier.py  test_verify.py  test_verify_wrapper.py  test_xml.py
(+322 files in other folders)
