#:schema https://json.schemastore.org/pyproject.json
[project]
description = "Tool for creating and verifying consumer-driven contracts using the Pact framework."
name        = "pact-python"

dynamic  = ["version"]
keywords = ["contract-testing", "pact", "testing"]
license  = { file = "LICENSE" }
readme   = "README.md"

authors = [
  { name = "Joshua Ellis", email = "josh@jpellis.me" },
  { name = "Matthew Balvanz", email = "matthew.balvanz@workiva.com" },
]
maintainers = [{ name = "Joshua Ellis", email = "josh@jpellis.me" }]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python",
  "Topic :: Software Development :: Testing",
]

requires-python = ">=3.10"

# Dependencies of Pact Python should be specified using the broadest range
# compatible version unless:
#
# - A specific feature is required in a new minor release
# - A minor version address vulnerability which directly impacts Pact Python
dependencies = [
  # Pact dependencies
  "pact-python-ffi~=0.4.0",
  # External dependencies
  "yarl~=1.0",
]

  [project.urls]
  changelog     = "https://github.com/pact-foundation/pact-python/blob/main/CHANGELOG.md"
  documentation = "https://pact-foundation.github.io/pact-python/"
  homepage      = "https://pact.io"
  issues        = "https://github.com/pact-foundation/pact-python/issues"
  source        = "https://github.com/pact-foundation/pact-python"

  [project.scripts]
  pact-verifier = "pact.v2.cli.verify:main"

  [project.optional-dependencies]
  # Dependencies required for v2 only
  compat-v2 = [
    # Pact dependencies
    "pact-python-cli~=2.0",
    # External dependencies
    "click~=8.0",
    "psutil~=7.0",
    "requests~=2.0",
    "six~=1.0",
  ]

[dependency-groups]
# Linting and formatting tools use a more narrow specification to ensure
# developper consistency. All other dependencies are as above.
dev = [
  "ruff==0.13.3",
  { include-group = "docs" },
  { include-group = "example" },
  { include-group = "test" },
  { include-group = "types" },
  { include-group = "example-v2" },
  { include-group = "test-v2" },
]

docs = [
  "mkdocs-github-admonitions-plugin~=0.0",
  "mkdocs-literate-nav~=0.6",
  "mkdocs-llmstxt~=0.3",
  "mkdocs-material[recommended,git,imaging]~=9.0",
  "mkdocs-section-index~=0.3",
  "mkdocs_gen_files~=0.5",
  "mkdocstrings[python]~=0.23",
  "mkdocs~=1.5",
  "pathspec~=0.0",
]
example = [
  "fastapi~=0.0",
  "flask[async]~=3.0",
  "grpcio~=1.0",
  "protobuf~=6.0",
  "pydantic~=2.0",
  "pytest-cov~=7.0",
  "pytest~=8.0",
  "testcontainers~=4.0",
  "uvicorn[standard]~=0.0",
]
test = [
  "aiohttp~=3.0",
  "flask~=3.0",
  "pact-python-cli",
  "pytest-asyncio~=1.0",
  "pytest-bdd~=8.0",
  "pytest-cov~=7.0",
  "pytest-rerunfailures~=16.0",
  "pytest~=8.0",
  "requests~=2.0",
  "testcontainers~=4.0",
]
types = [
  "mypy==1.18.2",
  "types-grpcio~=1.0",
  "types-protobuf~=6.0",
  "types-requests~=2.0",
  # This is required for Python 3.10 support
  "typing-extensions~=4.0",
]

# Dependencies for v2 example and test environments
example-v2 = [
  "fastapi~=0.0",
  "flask[async]~=3.0",
  "pytest-cov~=7.0",
  "pytest~=8.0",
  "testcontainers~=4.0",
  "uvicorn[standard]~=0.0",
]
test-v2 = [
  "fastapi~=0.0",
  "httpx~=0.0",
  "mock~=5.0",
  "pytest-cov~=7.0",
  "pytest~=8.0",
  "uvicorn[standard]~=0.0",
]

[build-system]
build-backend = "hatchling.build"
requires      = ["hatch-vcs", "hatchling"]

################################################################################
## Hatch Configuration
################################################################################
[tool.hatch]

  [tool.hatch.version]
  source      = "vcs"
  tag-pattern = '^pact-python/(?P<version>\d+(?:\.\d+)*(?:(?:a|b|rc|\.post)\d+)?)$'

    [tool.hatch.version.raw-options]
    git_describe_command = [
      "git",
      "describe",
      "--tags",
      "--dirty",
      "--always",
      "--long",
      "--match",
      "pact-python/*",
    ]
    root = "."
    version_scheme = "no-guess-dev"

  [tool.hatch.build]

    [tool.hatch.build.hooks.vcs]
    version-file = "src/pact/__version__.py"

    [tool.hatch.build.targets.wheel]
    packages = ["/src/pact"]

  ########################################
  ## Hatch Environment Configuration
  ########################################
  [tool.hatch.envs]

    # Install dev dependencies in the default environment to simplify the developer
    # workflow.
    [tool.hatch.envs.default]
    extra-dependencies = ["hatchling", "hatch-vcs"]
    installer          = "uv"
    path               = ".venv"
    # This is require to get around an incompatibility between hatch and uv
    # See: https://github.com/pypa/hatch/issues/1639
    # See: https://github.com/pypa/hatch/issues/1852
    pre-install-commands = [
      "uv pip install --group dev -e .",
      "uv pip install --group dev -e ./pact-python-ffi",
      "uv pip install --group dev -e ./pact-python-cli",
    ] #

    # Update paths to ensure the shared library can be found
    # TODO: See if this can be overridden on a per-platform basis
    # https://github.com/pypa/hatch/discussions/2024
    # [tool.hatch.envs.default.overrides]
    # platform.windows.env-vars = { PATH = "{root}/src/pact_ffi;{env:PATH}" }

      [tool.hatch.envs.default.scripts]
      all                = ["example", "format", "lint", "test", "typecheck"]
      docs               = "mkdocs serve {args}"
      docs-build         = "mkdocs build {args}"
      example            = "pytest --ignore=examples/v2 examples/ {args}"
      format             = "ruff format {args}"
      lint               = "ruff check --output-format=full --show-fixes {args}"
      test               = "pytest --ignore=tests/v2 tests/ {args}"
      typecheck          = ["typecheck-examples", "typecheck-src", "typecheck-tests"]
      typecheck-examples = "mypy examples/ {args}"
      typecheck-src      = "mypy src/ {args}"
      typecheck-tests    = "mypy tests/ {args}"

    # Test environment for running unit tests.
    [tool.hatch.envs.test]
    installer            = "uv"
    path                 = ".venv/test"
    pre-install-commands = ["uv pip install --group test -e ."]

      [[tool.hatch.envs.test.matrix]]
      python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

    # Test environment for running unit tests. This automatically tests against all
    # supported Python versions.
    [tool.hatch.envs.example]
    installer            = "uv"
    path                 = ".venv/example"
    pre-install-commands = ["uv pip install --group example -e ."]

      [tool.hatch.envs.example.scripts]
      all = ["example"]

      [[tool.hatch.envs.example.matrix]]
      python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

    [tool.hatch.envs.v2-test]
    features             = ["compat-v2"]
    installer            = "uv"
    path                 = ".venv/v2-test"
    pre-install-commands = ["uv pip install --group test-v2 -e ."]

      [tool.hatch.envs.v2-test.scripts]
      all  = ["test"]
      test = "pytest tests/v2 {args}"

      [[tool.hatch.envs.v2-test.matrix]]
      python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

    [tool.hatch.envs.v2-example]
    features             = ["compat-v2"]
    installer            = "uv"
    path                 = ".venv/v2-example"
    pre-install-commands = ["uv pip install --group example-v2 -e ."]

      [tool.hatch.envs.v2-example.scripts]
      all     = ["example"]
      example = "pytest examples/v2 {args}"

      [[tool.hatch.envs.v2-example.matrix]]
      python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

################################################################################
## UV Workspace
################################################################################
[tool.uv]
  [tool.uv.sources]
  pact-python-cli = { workspace = true }
  pact-python-ffi = { workspace = true }

  [tool.uv.workspace]
  members = ["pact-python-cli", "pact-python-ffi"]

################################################################################
## PyTest Configuration
################################################################################
[tool.pytest]

  [tool.pytest.ini_options]
  addopts = [
    "--import-mode=importlib",
    # Coverage options
    "--cov-config=pyproject.toml",
    "--cov-report=xml",
    "--cov=pact",
  ]
  asyncio_default_fixture_loop_scope = "session"
  filterwarnings = [
    "ignore::DeprecationWarning:examples",
    "ignore::DeprecationWarning:pact",
    "ignore::DeprecationWarning:tests",
  ]
  pythonpath = "."
  reruns = 3

  log_date_format = "%H:%M:%S"
  log_format      = "%(asctime)s.%(msecs)03d [%(levelname)-8s] %(name)s: %(message)s"
  log_level       = "NOTSET"

  markers = [
    # Marker for tests that require a container
    "container",

    # Markers for the compatibility suite
    "consumer",
    "message",
    "provider",
  ]

################################################################################
## Coverage
################################################################################
[tool.coverage]

  [tool.coverage.paths]
  pact  = ["/src/pact"]
  tests = ["/examples", "/tests"]

  [tool.coverage.report]
  exclude_lines = [
    "@(abc\\.)?abstractmethod",   # Ignore abstract methods
    "if TYPE_CHECKING:",          # Ignore typing
    "if __name__ == .__main__.:", # Ignore non-runnable code
    "raise NotImplementedError",  # Ignore defensive assertions
  ]

################################################################################
## Ruff Configuration
################################################################################
[tool.ruff]
extend-exclude = ["src/pact/v2/*", "tests/v2/*", "examples/v2/*"]

  [tool.ruff.lint]
  select = ["ALL"]

  ignore = [
    "D200",   # Require single line docstrings to be on one line.
    "D203",   # Require blank line before class docstring
    "D212",   # Multi-line docstring summary must start at the first line
    "FIX002", # Forbid TODO in comments
    "TD002",  # Assign someone to 'TODO' comments

    # The following are disabled for compatibility with the formatter
    "COM812", # enforce trailing commas
    "ISC001", # require imports to be sorted
  ]

    [tool.ruff.lint.pyupgrade]
    keep-runtime-typing = true

    [tool.ruff.lint.pydocstyle]
    convention = "google"

    [tool.ruff.lint.isort]
    known-first-party = ["pact", "pact_cli", "pact_ffi"]

    [tool.ruff.lint.flake8-tidy-imports]
    ban-relative-imports = "all"

  [tool.ruff.format]
  docstring-code-format = true
  preview               = true

################################################################################
## Mypy Configuration
################################################################################
[tool.mypy]
exclude = """(?x)^(
  (src/pact|tests|examples)/v2/.*\\.pyi?
)$"""

################################################################################
## CI Build Wheel
################################################################################
[tool.cibuildwheel]

################################################################################
## Typos
################################################################################
[tool.typos]

  [tool.typos.default]
  extend-ignore-re = [
    # Ignore spelling on a specific line
    "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",
    # Ignore spelling in a specific block
    "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on",
  ]

  [tool.typos.files]
  extend-exclude = ["*.svg"]
